# semantic-search-Model

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.py  index.html  monitor.py  requirements.txt  s3-policy.json
backend/: README.md  __init__.py  main.py  pyproject.toml  requirements.txt
backend/scripts/: smoke_http.py  smoke_local.py
backend/src/: __init__.py
backend/src/api/: __init__.py  deps.py  routes.py
backend/src/core/: __init__.py  config.py
backend/src/models/: __init__.py  model_manager.py
backend/src/services/: __init__.py  data_service.py  gcs_storage_service.py  search_service.py
backend/src/utils/: __init__.py  logging.py  timing.py
docker/: Dockerfile  docker-compose.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/AddFranchiseModal/: AddFranchiseModal.jsx  index.js
frontend/src/components/ConfirmationModal/: ConfirmationModal.jsx
frontend/src/components/ResultsList/: ResultsList.jsx  index.js
frontend/src/components/SearchBar/: SearchBar.jsx  index.js
frontend/src/hooks/: useSearch.js
frontend/src/services/: api.js
models/: metadata.json  model_manager.py
services/: data_service.py  s3_backup_service.py  search_service.py
tests/: example_usage.py  test_api.py  test_service.py
